chore(block): implement block broadcasting
